--- a/speechQuality/QualityNetPOLQA/config/dpcrn_qsehasa20240518_134721.yml
+++ b/speechQuality/QualityNetPOLQA/config/dpcrn_qsehasa20240518_134721.yml
@@ -12,9 +12,9 @@ focal_gamma: 2
 gamma: 0.3
 hop_size: 256
 load_weight: false
-lr: 0.001
-model2_type: cnn
-model_name: dpcrn_qse20240517_145843
+lr: 0.0005
+model2_type: hasa
+model_name: dpcrn_qsehasa20240518_134721
 model_type: dpcrn_qse
 optimizer_type: 3
 patience: 5
@@ -23,6 +23,7 @@ save: true
 save_model_epoch: 5
 scheduler_type: 1
 score_step: 0.2
+se_input_type: 2
 shuffle: true
 smooth: true
 spilt_rate:
