--- a/speechQuality/QualityNetPOLQA/config/cn2n20240521_093758.yml
+++ b/speechQuality/QualityNetPOLQA/config/cn2n20240521_093758.yml
@@ -1,23 +1,24 @@
-batch_size: 12
+batch_size: 128
 beta1: 0.99
 beta2: 0.999
 cnn_feature: 64
 cnn_filter: 128
-delta_loss: 0.0004
+delta_loss: 0.001
 dropout: 0.3
-enable_frame: false
-epochs: 20
+enableFrame: false
+enable_frame: true
+epochs: 30
 fft_size: 512
 focal_gamma: 2
 gamma: 0.3
 hop_size: 256
 load_weight: false
-lr: 0.0001
+lr: 0.0005
 model2_type: null
-model_name: hubert20240520_134857
-model_type: hubert
-normalize_output: false
-now_time: '20240520_134857'
+model_name: cn2n20240521_093758
+model_type: cn2n
+normalize_output: true
+now_time: '20240521_093758'
 optimizer_type: 1
 patience: 5
 random_seed: 34
@@ -32,5 +33,5 @@ spilt_rate:
 - 0.8
 - 0.1
 - 0.1
-step_size: 5
+step_size: 10
 weight_decay: 0
