--- a/speechQuality/QualityNetPOLQA/config/dpcrn_se20240518_224558.yml
+++ b/speechQuality/QualityNetPOLQA/config/dpcrn_se20240518_224558.yml
@@ -1,24 +1,24 @@
-batch_size: 32
+batch_size: 24
 beta1: 0.99
 beta2: 0.999
 cnn_feature: 64
 cnn_filter: 128
-delta_loss: 0.0004
+delta_loss: 0.001
 dropout: 0.3
 enable_frame: true
-epochs: 35
+epochs: 30
 fft_size: 512
 focal_gamma: 2
 gamma: 0.3
 hop_size: 256
 load_weight: false
-lr: 0.001
+lr: 0.0006
 model2_type: null
 model_name: dpcrn_se20240518_224558
 model_type: dpcrn_se
-normalize_output: true
+normalize_output: false
 now_time: '20240518_224558'
-optimizer_type: 3
+optimizer_type: 1
 patience: 5
 random_seed: 34
 save: true
@@ -32,5 +32,5 @@ spilt_rate:
 - 0.8
 - 0.1
 - 0.1
-step_size: 10
+step_size: 8
 weight_decay: 0
