--- a/speechQuality/QualityNetPOLQA/config/dpcrn_qsehasa20240518_134721.yml
+++ b/speechQuality/QualityNetPOLQA/config/dpcrn_qsehasa20240518_134721.yml
@@ -5,17 +5,18 @@ cnn_feature: 64
 cnn_filter: 128
 delta_loss: 0.0002
 dropout: 0.3
-enableFrame: true
+enable_frame: true
 epochs: 15
 fft_size: 512
 focal_gamma: 2
 gamma: 0.3
 hop_size: 256
 load_weight: false
-lr: 0.0005
+lr: 0.0001
 model2_type: hasa
 model_name: dpcrn_qsehasa20240518_134721
 model_type: dpcrn_qse
+normalize_output: false
 now_time: '20240518_134721'
 optimizer_type: 3
 patience: 5
