--- a/speechQuality/QualityNetPOLQA/config/dpcrn_qselstmClass20240520_232653.yml
+++ b/speechQuality/QualityNetPOLQA/config/dpcrn_qselstmClass20240520_232653.yml
@@ -1,24 +1,24 @@
-batch_size: 12
+batch_size: 8
 beta1: 0.99
 beta2: 0.999
 cnn_feature: 64
 cnn_filter: 128
-delta_loss: 0.0004
+delta_loss: 0.0002
 dropout: 0.3
-enable_frame: false
-epochs: 20
+enable_frame: true
+epochs: 15
 fft_size: 512
 focal_gamma: 2
 gamma: 0.3
 hop_size: 256
 load_weight: false
 lr: 0.0001
-model2_type: null
-model_name: hubert20240520_134804
-model_type: hubert
+model2_type: lstmClass
+model_name: dpcrn_qselstmClass20240520_232653
+model_type: dpcrn_qse
 normalize_output: false
-now_time: '20240520_134804'
-optimizer_type: 1
+now_time: '20240520_232653'
+optimizer_type: 3
 patience: 5
 random_seed: 34
 save: true
