--- a/speechQuality/QualityNetPOLQA/config/hasa20240522_173240.yml
+++ b/speechQuality/QualityNetPOLQA/config/hasa20240522_173240.yml
@@ -13,6 +13,7 @@ gamma: 0.3
 hop_size: 256
 load_weight: false
 lr: 0.0005
+mask_target: null
 model2_type: null
 model_name: hasa20240522_173240
 model_type: hasa
