--- a/speechQuality/QualityNetPOLQA/config/crn_cp_qn20240607_231722.yml
+++ b/speechQuality/QualityNetPOLQA/config/crn_cp_qn20240607_231722.yml
@@ -1,4 +1,4 @@
-batch_size: 8
+batch_size: 64
 beta1: 0.99
 beta2: 0.999
 cnn_feature: 64
@@ -6,23 +6,23 @@ cnn_filter: 128
 delta_loss: 0.0002
 dropout: 0.3
 enable_frame: true
-epochs: 15
+epochs: 35
 expire: false
 fft_size: 512
 focal_gamma: 2
 gamma: 0.3
 hop_size: 256
 iter_step: 100
-iteration: 9000
+iteration: 10000
 load_weight: false
-lr: 5.0e-05
+lr: 0.0005
 mask_target: null
-model2_type: cnnA
-model_name: dpcrn_grlcnnA20240606_194309
-model_type: dpcrn_grl
+model2_type: null
+model_name: crn_cp_qn20240607_231722
+model_type: crn_cp_qn
 normalize_output: true
-now_time: '20240606_194309'
-optimizer_type: 3
+now_time: '20240607_231722'
+optimizer_type: 1
 patience: 5
 qn_input_type: 1
 random_seed: 34
@@ -39,5 +39,5 @@ spilt_rate:
 - 0.8
 - 0.1
 - 0.1
-step_size: 25
+step_size: 5
 weight_decay: 0
