--- a/speechQuality/QualityNetPOLQA/config/dpcrn_jointcnnA20240608_160714.yml
+++ b/speechQuality/QualityNetPOLQA/config/dpcrn_jointcnnA20240608_160714.yml
@@ -1,4 +1,4 @@
-batch_size: 64
+batch_size: 8
 beta1: 0.99
 beta2: 0.999
 cnn_feature: 64
@@ -6,7 +6,7 @@ cnn_filter: 128
 delta_loss: 0.0002
 dropout: 0.3
 enable_frame: true
-epochs: 35
+epochs: 30
 expire: false
 fft_size: 512
 focal_gamma: 2
@@ -17,11 +17,11 @@ iteration: 10000
 load_weight: false
 lr: 0.0005
 mask_target: null
-model2_type: null
-model_name: crn_cp_qn20240608_001701
-model_type: crn_cp_qn
+model2_type: cnnA
+model_name: dpcrn_jointcnnA20240608_160714
+model_type: dpcrn_joint
 normalize_output: true
-now_time: '20240608_001701'
+now_time: '20240608_160714'
 optimizer_type: 1
 patience: 5
 qn_input_type: 1
